--- a/index1.html
+++ b/index1.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html lang="ko">
-	<head>
-		<meta charset="utf-8">
-		<title>index1. 정서영입니다</title>
-	</head>
-	<body>
-		<h1> 60122485 정서영 </h1> <hr/>
-		<img src="./images/60122485_myPicture.gif" alt="60122485_myPicture"/><br/>
-		
-	
-		<span style="Color:Brown">생년월일 :: </span> 1993. 01. 18 <br/>
-		<span style="Color:Brown">가족관계 :: </span> 아빠 엄마 언니 나 그리고 5마리고양이 <br/>
-		
-		<a href="./images/seoyoungCats.png" target="_blank">서영이네 고양이 보기 ♥</a> <span style="color:gray;8pt">(새로운창으로 열립니다) </span> <br/>
-		
-		<span style="Color:Brown">학력 :: </span> 명지대학교 컴퓨터공학과 재학중 <br/>
-		<span style="Color:Brown">좋아하는것 :: </span> 서영이가 좋아하는것 궁굼하다면 <a href="./index2.html"> 클릭!!</a><br/>
-		<span style="Color:Brown">서영이설문조사 :: </span> 서영이에대해 이야기해보아용 ♥ <a href="./index3.html"> 클릭!! </a> <br/>
-		
+<head>
+<meta charset="utf-8">
+	<title>index1. 정서영입니다</title>
 
-	</body>
+	<link href="./stylesheet/reset.css" rel="stylesheet" type="text/css">
+	<link href="./stylesheet/index1.css" rel="stylesheet" type="text/css">	
+	
+</head>
+	
+<body>
+	<div id="wrap">
+		<h1> 60122485 정서영 </h1> <hr/>
+		
+		<div id = "left">
+			<img src="./images/60122485_myPicture.gif" alt="60122485_myPicture"/><br/>
+		</div>		
+		
+		<div id = "right">
+
+			<div id = "right_middle">
+
+				<span class="maroon">생년월일 :: </span> 1993. 01. 18 <br/>
+				<span class="maroon">가족관계 :: </span> 아빠 엄마 언니 나 그리고 5마리고양이
+				
+				<a href="./images/seoyoungCats.png" target="_blank"> 서영이네 고양이 보기 ♥</a> 
+				<span class="gray">(새로운창으로 열립니다) </span> <br/>
+				
+				<span class="maroon">학력 :: </span> 명지대학교 컴퓨터공학과 재학중 <br/>
+				<span class="maroon">좋아하는것 :: </span> 서영이가 좋아하는것 궁굼하다면 <a href="./index2.html"> 클릭!!</a><br/>
+				<span class="maroon">서영이설문조사 :: </span> 서영이에대해 이야기해보아용 ♥ <a href="./index3.html"> 클릭!!</a>
+			</div>
+		</div>
+	</div>
+
+</body>
 </html>
