--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div id="wrap">
-		
+
 		<div id="top">
 			<span class="red"> ★ 바로가기 :: <a href="#myAnimal">서영이가 좋아하는 동물</a> or 
 			<a href="#myMusic">서영이가 좋아하는 노래</a> Click!! </span> <hr/>
@@ -22,8 +22,9 @@
 				<span class="title"> Animal </span></a>
 				저는 <b>고양이</b>가 너무좋아요.<br/>
 				 조용하고 차가운느낌의 요 동물이 귀여운모습을 보이면 몇배로 귀여워요<br/><br/>
-				
-				<table border="2">
+		
+			<div id="animal">		
+				<table>
 					<caption> 몇가지 좋아하는 고양이 움짤들  </caption>  
 					<tbody>
 						<tr>
@@ -36,7 +37,7 @@
 						</tr>
 					</tbody>
 				</table>
-
+			</div>
 		</div>	
 		<hr/>
 		<!-- 좋아하는것 2.노래 -->
@@ -48,8 +49,9 @@
 			<b>제 귀에만 좋으면</b> 어떤장르든 상관없어요. <br/><br/>
 			
 
-			<table border="3">
-				<caption> 최근들어 즐겨듣는 노래♪ </caption>
+			<div id="music">
+			<table>
+				<caption> 최근들어 즐겨듣는 노래♪  </caption>
 				<thead>
 					<tr>
 						<th>장르</th> <th>가수</th> <th>제목</th> <th>재생</th>
@@ -86,7 +88,7 @@
 				</tfoot>
 
 			</table>
-
+			</div>
 		</div>
 		<hr/>
 		<div id = "bottom">
