--- a/index3.html
+++ b/index3.html
@@ -67,7 +67,7 @@
 
 			<div class="textfiled">
 				마지막으로, 서영이에게 바라는점이 있다면?<br/>
-				<textarea cols="30" rows="10" name="Text"> 정말 자유롭게 써주세요</textarea>
+				<textarea name="Text"> 정말 자유롭게 써주세요</textarea>
 				<input type="button" value="완성" /> <br/>
 			</div>
 		</form>
