--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
 		
 		<div id = "right">
 
-			<div id = "right_middle">
+			<div id = "right_text">
 
 				<span class="maroon">생년월일 :: </span> 1993. 01. 18 <br/>
 				<span class="maroon">가족관계 :: </span> 아빠 엄마 언니 나 그리고 5마리고양이
